bootstrap/argo-cd/resources/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: argocd
spec:
  entryPoints:
    - websecure
  tls:
    secretName: wildcard.ryankey.dev-tls
  routes:
    - kind: Rule
      match: Host(`argo.ryankey.dev`) || Host(`argocd.ryankey.dev`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argo.ryankey.dev`) || Host(`argocd.ryankey.dev`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
